[package]
authors = ["Christopher Hunt"]
categories = ["wasm"]
description = "A library of components that can be assembled to form a chart."
edition = "2018"
license = "Apache-2.0"
name = "yew-chart"
readme = "./README.md"
repository = "https://github.com/titanclass/yew-chart.git"
version = "0.1.0"

[dependencies]
chrono = "0.4.19"
gloo-events = "0.1.1"
gloo-utils = "0.1.2"
log = "0.4"
wasm-bindgen = "0.2.64"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "DomRect",
    "Element",
    "SvgElement",
]