[package]
authors = ["Christopher Hunt"]
categories = ["wasm"]
description = "A library of components that can be assembled to form a chart."
edition = "2018"
license = "Apache-2.0"
name = "yew-chart"
readme = "./README.md"
repository = "https://github.com/titanclass/yew-chart.git"
version = "0.5.0"

[dependencies]
chrono = "0.4"
gloo-events = "0.1"
gloo-utils = "0.1"
wasm-bindgen = "0.2"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "DomRect",
    "Element",
    "SvgElement",
]

[features]

# Set when custom tooltips are to be used instead of browser based ones
custom-tooltip = []